@@ -158,6 +158,14 @@ Thanks to Ken Turner for contributing to this release.
   selection would throw an exception which would result in the selection
   extension being removed from the text area.
 
+- Printing is no longer done in a background thread, and now blocks the
+  UI. due to various thread-safety problems.
+
+- Printing a range of pages would always print starting from the first
+  page.
+
+- jEdit didn't compile with Java 2 version 1.3.
+
 }}}
 {{{ API Changes
 
